--- a/views/home.html
+++ b/views/home.html
@@ -22,7 +22,7 @@
 	<header class="homebanner">
 
 			<h1 class="homebannertext">
-				<a id="logo">Chat<span> PazColombia</span></a>
+				<a id="logo">Chat<span> PazColombia Tester</span></a>
 			</h1>
 
 	</header>
